# InfoControl

./: .gitignore  LISENCE  Prompts_used.py  README.md  main.py  pyproject.toml
data/: OrionArc_eval.json
data/eval/: Financial_eval.json  HR_eval.json
experiments/: current_experiment.json
experiments/GPT-4o-mini/: GPT-4o-mini-MaliciousPrompting-Alignment-all.csv  GPT-4o-mini-MaliciousPrompting-PostProcessing-all.csv  GPT-4o-mini-MaliciousPrompting-RoleChecking-NoRole-all.csv  GPT-4o-mini-MaliciousPrompting-RoleChecking-all.csv  GPT-4o-mini-MaliciousPrompting-baseline-all.csv  GPT-4o-mini-SensitiveInfoLeakage-Alignment-PostProcessing.csv  GPT-4o-mini-SensitiveInfoLeakage-Alignment-RoleChecking-PostProcessing-all-FinDir.csv  GPT-4o-mini-SensitiveInfoLeakage-Alignment-RoleChecking-PostProcessing-all-HRDir.csv  GPT-4o-mini-SensitiveInfoLeakage-Alignment-RoleChecking-all-HRDir.csv  GPT-4o-mini-SensitiveInfoQA-Alignment-PostProcessing-all.csv  GPT-4o-mini-SensitiveInfoQA-Alignment-all.csv  GPT-4o-mini-SensitiveInfoQA-PostProcessing-all.csv  GPT-4o-mini-SensitiveInfoQA-RoleChecking-PostProcessing-all-FinDir.csv  GPT-4o-mini-SensitiveInfoQA-RoleChecking-all-CEO.csv  GPT-4o-mini-SensitiveInfoQA-RoleChecking-all-FinDir.csv  GPT-4o-mini-SensitiveInfoQA-RoleChecking-all-HRDir.csv  GPT-4o-mini-SensitiveInfoQA-RoleChecking-all-NoRole.csv  GPT-4o-mini-SensitiveInfoQA-alignment-RoleChecking-all-FinDir.csv
src/: datasets.ipynb  evaluation_prompts.py  evaluators.py  guardrail_LLM.py  guardrails.py  simple_RAG.py  workflow.ipynb
(+13 files in other folders)
