[project]
name = "infocontrol"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "google-genai>=1.41.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "langsmith>=0.4.32",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "openevals>=0.1.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "together>=1.5.26",
]
